--- a/ACT6C/.project
+++ b/ACT6C/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>ACT6C</name>
+	<name>ACT6</name>
 	<comment></comment>
 	<projects>
 	</projects>
